@@ -27,7 +27,7 @@
         <awssdk-version>2.42.6</awssdk-version>
         <jackson-version>2.21.1</jackson-version>
         <evalex-version>3.6.0</evalex-version>
-        <junit-version>5.14.3</junit-version>
+        <mockito-version>5.21.0</mockito-version>
         <kafka-version>4.2.0</kafka-version>
         <maven-surefire-plugin-version>3.5.2</maven-surefire-plugin-version>
     </properties>
@@ -111,11 +111,17 @@
             <version>${evalex-version}</version>
         </dependency>
 
-        <!-- junit 5, unit test -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -150,7 +156,6 @@
             <version>${gson-version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -166,6 +171,13 @@
             <artifactId>hibernate-c3p0</artifactId>
             <version>${hibernatecp30-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
@@ -241,6 +253,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin-version}</version>
+                <configuration>
+                    <failIfNoTests>true</failIfNoTests>
+                    <argLine>
+                        ${argLine} ${surefireArgLine}
+                        -XX:+EnableDynamicAgentLoading
+                        -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.7/byte-buddy-agent-1.17.7.jar
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
